Refactor debugging and testing in LoongArch64 application
- Updated `build.sh` to include binary output generation alongside debug information.
- Enhanced `Cargo.lock` and `Cargo.toml` with new dependencies for `loongArch64`, `bit_field`, and `bitflags`.
- Modified `src/main.rs` to switch from `test_panic` to `test_vtimer` for timer testing.
- Improved UART output handling in `src/print.rs` to correctly format newlines.
- Added `test_vtimer` function in `src/test.rs` to test timer functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ log = "0.4"
 spin = "0.10.0"
 buddy_system_allocator = "0.11.0"
 tock-registers = "0.10.0"
+loongArch64 = "0.2.5"
 
 [dependencies.unwinding]
 path = "../unwinding"
