Refactor build scripts and linker configuration for LoongArch64 application
- Updated `build.sh` to use a variable for the target architecture, improving maintainability.
- Increased stack size in `linker.ld` to 64KB for better memory management.
- Adjusted `run_qemu.sh` to reflect the new target variable and added debug options.
- Modified `.cargo/config.toml` to align with the updated target name.
- Cleaned up panic handling in `src/panic.rs` by commenting out unnecessary print statements.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,5 @@
-[target.loongarch64-unknown-none]
+[target.loongarch64-unknown-none-softfloat]
 rustflags = [
     "-Clink-arg=-Tlinker.ld",
-    "-Ctarget-feature=-lsx",
-    "-Cforce-frame-pointers=yes",
+    "-Ctarget-feature=-lsx,-lasx",
 ]
