Update dependencies and enhance panic handling in LoongArch64 application
- Bump `gimli` version from 0.32.0 to 0.32.2 in `Cargo.toml` and `Cargo.lock`.
- Remove unnecessary features from the `unwinding` dependency in `Cargo.toml`.
- Improve panic handling in `src/panic.rs` by enabling stack trace printing and updating the log message.
- Simplify the `test_panic` function in `src/test.rs` for clearer panic testing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ loongArch64 = "0.2.5"
 [dependencies.unwinding]
 path = "../unwinding"
 default-features = false
-features = ["fde-gnu-eh-frame-hdr", "hide-trace", "panic", "personality", "unwinder"]
+features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder"]
 
 [dependencies.gimli]
-version = "0.32.0"
+version = "0.32.2"
 default-features = false
 features = ["read-core"]
 
