--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tock-registers = "0.10.0"
 loongArch64 = "0.2.5"
 
 [dependencies.unwinding]
-path = "../unwinding"
+path = "../unwinding" # my porting fork for loongarch64
 default-features = false
 features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder"]
 
