--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,11 +1,15 @@
 [target.loongarch64-unknown-none]
 rustflags = [
+    "-Cforce-unwind-tables=yes",
     "-Clink-arg=-Tlinker.ld",
+    # "-Clink-arg=--eh-frame-hdr",
     "-Ctarget-feature=-lsx,-lasx",
 ]
 
 [target.loongarch64-unknown-none-softfloat]
 rustflags = [
+    "-Cforce-unwind-tables=yes",
     "-Clink-arg=-Tlinker.ld",
+    # "-Clink-arg=--eh-frame-hdr",
     "-Ctarget-feature=-lsx,-lasx",
 ]
