Enhance build process for LoongArch64 target in `build.sh`, add target-specific build commands, and update `Cargo.toml` to remove unnecessary features from `unwinding`. Update `Cargo.lock` to reflect `unwinding` version bump to 0.2.8. Modify panic handling in `src/main.rs` to enable panic testing and improve stack trace printing in `src/panic.rs`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ loongArch64 = "0.2.5"
 [dependencies.unwinding]
 path = "../unwinding" # my porting fork for loongarch64
 default-features = false
-features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder", "baremetal-debug"]
+features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder"]
 # features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder"]
 
 [dependencies.gimli]
