Update `Cargo.toml` to add `baremetal-debug` feature, increase stack size in `linker.ld` to 16MB for improved memory management, and adjust target in `run_qemu.sh` to `loongarch64-unknown-none` for better compatibility.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ loongArch64 = "0.2.5"
 path = "../unwinding" # my porting fork for loongarch64
 default-features = false
 features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder"]
-# features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder"]
+# features = ["fde-gnu-eh-frame-hdr", "panic", "personality", "unwinder", "baremetal-debug"]
 
 [dependencies.gimli]
 version = "0.32.2"
